--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+/* Global */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* Navbar */
+.nav {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #4d73c4;
+  color: white;
 }
 
 .profile {
@@ -10,4 +25,9 @@
 
 .logout {
   display: none;
+  color: white;
+}
+
+.logout:hover {
+  color: salmon;
 }
