--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #4d73c4;
+  background-color: #6a90e2;
   color: white;
 }
 
@@ -118,11 +118,26 @@ a {
 }
 
 /* Main Content template (pre-login) */
+.pre-login-content {
+  margin-top: -2rem;
+}
 .login-banner {
+  margin-bottom: 1rem;
+  margin-left: -2rem;
+  margin-right: -2rem;
   padding: 0.5rem;
   background-color: salmon;
   color: white;
   text-align: center;
+}
+
+.profile-template {
+  width: 30%;
+  margin: 1rem 0;
+  padding: 1rem;
+  background-color: white;
+  border: 1px solid #a1a1a1;
+  border-radius: 6px;
 }
 
 .post-template {
